# compound-eyes

./: .gitignore  .gitmodules  Dockerfile.mrcal  README.md  calibration_tool.py  camera_controls_nt.py  camera_manager.py  convert_frame.py  datatypes.py  debug_server.py  fps_counter.py  main.py  network_choice.py  paint_frame.py  pyproject.toml  source.py
compound_eyes/: calibration_routine.py  calibration_tool.py  camera_controls_nt.py  camera_manager.py  camera_model.py  camera_server.py  datatypes.py  debug_server.py  network_choice.py
compound_eyes/node/: __init__.py  focus.py  fps_counter.py  stream.py
mjpeg_streamer/: server.py  stream.py
