[project]
name = "camera-controls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "linuxpy>=0.23.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "propcache==0.4.1",
    "robotpy>=2025.3.2.2",
    "robotpy-cscore>=2025.3.2.2",
]
