[project]
name = "camera-controls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "linuxpy>=0.23.0",
    "numpy>=2.2.1",
    "opencv-python>=4.11.0.86",
    "robotpy[apriltag]>=2025.3.2.2",
    "scipy>=1.16.2",
]
